--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,20 @@ body {
 .wrapper {
     background-color: rgb(190, 190, 190);
     max-width: 1440px;
-    margin: 20px auto;
-    padding: 16px;
+    padding: 6px;
+    margin: 2vh auto;
+    min-height: 96vh;
+}
+
+.content {
+    width: 100%;
+    height: 100%;
 }
 
 #photos div {
     position: relative;
     width: 48%;
-    height: 400px;
+    height: 380px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -58,13 +64,35 @@ body {
 }
 
 
+#photos div a {
+    color: rgb(219, 45, 103);
+}
+
 #photos div p:nth-child(2) {
     bottom: 5%;
     word-spacing: 10px;
 }
 
-#photos div a {
-    color: rgb(219, 45, 103);
+#viewMoreBtn {
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-color: transparent;
+    margin: 10px auto;
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+    transition: .3s linear;
+    cursor: pointer;
+
+}
+
+#viewMoreBtn:hover {
+    background-color: rgb(117, 117, 117);
+    text-shadow: 0 0 10px black;
+
 }
 
 @media (max-width: 800px) {
@@ -79,6 +107,10 @@ body {
     #photos div {
         width: 100%;
         margin: 0 0 80px 0;
+    }
+
+    #photos div:nth-last-child(1) {
+        margin: 0;
     }
 
     #photos div .info {
@@ -103,6 +135,10 @@ body {
     #photos div p:nth-child(2) {
         bottom: 30px;
         word-spacing: 16px;
+    }
+
+    #viewMoreBtn {
+        margin: 5% auto;
     }
 
 }
